# MinishCapRecomp

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  ISSUES.md  README.md  RELEASE_NOTES.md  baserom.md  game.toml
config/: minishcap_usa.toml
docs/: BORROWED_REFERENCES.md  MINISH_CAP_NOTES.md  VALIDATION_PLAN.md
ghidra/: import_symbols.py
recomp/launcher/: boxart.tga
src/: game_config.cpp  game_config.h  main.cpp  minish_extended_view.cpp  minish_extended_view.h
symbols/: README.md  function_boundaries.tsv  imported_data_symbols.tsv  imported_symbols.tsv  minishcap.toml
tools/: make_release.ps1  package_release.ps1  repro_hang.py  savestate_roundtrip.py
tools/import_tmc_symbols/: import_tmc_symbols.py  main.cpp
tools/verify_rom_hash/: main.cpp
